syntax = "proto3";
package onestory.story.proto;

service StoryService {
    rpc CreateStory (StoryInfo) returns (Response) {}
    rpc GetStoryList (RequestStoryId) returns (ResponseStoryList) {}
    rpc UpdateStory (StoryInfo) returns (Response) {}
}

message StoryInfo {
   int64 Id = 1;
   int64 StoryId = 2;
   string Uid = 3;
   string Cover = 4;
   string Title = 5;
   string Desc = 6;
   string PenName = 7;
   int64 CreateTime = 8;
   int64 UpdateTime = 9;
   int32 IsOpen = 10;
   string Extend = 11;
}

message RequestStoryId {
    repeated int64 Id = 1;
    repeated int64 StoryId = 2;
    string Uid = 3;
}

message Response {
   int64 Code = 1;
   string Message = 2;
   string Data = 3;
}

message ResponseStoryList {
    int64 Code = 1;
    string Message = 2;
    repeated StoryInfo StoryList = 3;
}